--- a/outros.html
+++ b/outros.html
@@ -7,6 +7,30 @@
     <title>Document</title>
 </head>
 <body>
-    
+    body{
+    background-color: rgb(22, 21, 21);
+}
+#menu ul li{
+    display: inline;
+}
+#menu ul{
+    margin: 0;
+    background-color: rgb(0, 0, 0);
+}
+
+#menu ul li a{
+    display: inline-block;
+    padding: 2px 100px;
+    color: rgb(196, 0, 0);
+}
+#menu{
+    text-align: center;
+}
+
+table, th, td{
+    border: 1px solid white;
+    color: aliceblue;
+    border-collapse: collapse;
+}
 </body>
 </html>
